# gDiamond

./: CMakeLists.txt  README.md  dram_heavy_access_demo.cu  index_checker.cpp  line_chart.py  meep_vaccum_gaussian_point_source.ipynb  meep_vaccum_point_source.ipynb  shmem_checker.cu  tags  throughput_demo.cu
.ipynb_checkpoints/: meep_vaccum_point_source-checkpoint.ipynb
demo/: diamond_tiling_mapping.cu  dram_heavy_access_demo.cu  fft_meep_vaccum_gaussian_point_source.ipynb  index_checker.cpp  shmem_checker.cu  stencil_vectorized_scalar_comparison.cu  throughput_demo.cu  throughput_mimic_mm_demo.cu  vectorized_load.cu
examples/: CMakeLists.txt  gpu.cu  gpu_dt.cu  gpu_dt_r.cu  gpu_figures.cu  gpu_fq.cu  gpu_mm.cu  gpu_mm_ver2.cu  gpu_mm_ver3.cu  gpu_mm_ver4.cu  gpu_mm_ver5.cu  gpu_pt.cu  gpu_upper_bound.cu  gpu_vectorized.cu  omp.cpp  omp_dt.cpp  omp_figures.cpp  seq.cpp  seq_figures.cpp  simple.cpp
gDiamond/: .gdiamond.hpp.swp  3  gdiamond.hpp  gdiamond_gpu.cuh  gdiamond_gpu_mm.cuh  gdiamond_gpu_mm_ver2.cuh  gdiamond_gpu_mm_ver3.cuh  gdiamond_gpu_mm_ver4.cuh  gdiamond_gpu_mm_ver5.cuh  gdiamond_gpu_mm_ver5_ls.cuh  gdiamond_gpu_naive_vectorized.cuh  gdiamond_omp.hpp  kernels.cuh  kernels_mm.cuh  kernels_mm_ver2.cuh  kernels_mm_ver3.cuh  kernels_mm_ver4.cuh  kernels_mm_ver5.cuh  kernels_naive_vectorized.cuh  save.cuh
unittests/: CMakeLists.txt  checker.cu  checker_gpu.cu  checker_omp.cpp  checker_omp_dt.cpp
